<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fi.oulu.danielszabo.pepper.screens.Help">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="34dp"
        android:gravity="center_horizontal"
        android:text="@string/hello_blank_fragment"
        android:textSize="24dp"
        android:textStyle="bold" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:text="@string/hello_blank_fragment2"
        android:layout_marginTop="100dp"
        android:textSize="18dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:text="@string/hello_blank_fragment3"
        android:layout_marginTop="200dp"
        android:textSize="18dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:text="@string/hello_blank_fragment4"
        android:layout_marginTop="275dp"
        android:textSize="18dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:text="@string/hello_blank_fragment5"
        android:layout_marginTop="350dp"
        android:textSize="18dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:text="@string/hello_blank_fragment6"
        android:layout_marginTop="425dp"
        android:textSize="18dp"/>

</FrameLayout>
