<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/back"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".applications.gpt_prototype.GPTFragment">

    <Button
        android:id="@+id/button_start"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="180dp"
        android:layout_height="80dp"
        android:layout_marginStart="64dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="#FFFFFF"
        android:fadingEdge="horizontal|vertical"
        android:fontFamily="@font/varela"
        android:text="@string/start"
        android:textAllCaps="true"
        android:textColor="#0D47A1"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_other"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="180dp"
        android:layout_height="80dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="#FFFFFF"
        android:fadingEdge="horizontal|vertical"
        android:fontFamily="@font/varela"
        android:text="@string/other"
        android:textAllCaps="true"
        android:textColor="#0D47A1"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_bye"
        app:layout_constraintStart_toEndOf="@+id/button_start" />

    <TextView
        android:id="@+id/txt_option_num2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/varela"
        android:text="@string/_2"
        android:textColor="#FF6F00"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/button_lg_2"
        app:layout_constraintEnd_toStartOf="@+id/button_lg_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button_lg_2"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/txt_option_num5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/varela"
        android:text="@string/_5"
        android:textColor="#FF6F00"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/button_lg_5"
        app:layout_constraintEnd_toStartOf="@+id/button_lg_5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button_lg_5"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/txt_option_num3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/varela"
        android:text="@string/_3"
        android:textColor="#FF6F00"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/button_lg_3"
        app:layout_constraintEnd_toStartOf="@+id/button_lg_3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button_lg_3"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/txt_option_num4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/varela"
        android:text="@string/_4"
        android:textColor="#FF6F00"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/button_lg_4"
        app:layout_constraintEnd_toStartOf="@+id/button_lg_4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button_lg_4"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/txt_option_num1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/varela"
        android:text="@string/_1"
        android:textColor="#FF6F00"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/button_lg_1"
        app:layout_constraintEnd_toStartOf="@+id/button_lg_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button_lg_1" />

    <Button
        android:id="@+id/button_bye"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="180dp"
        android:layout_height="80dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="#FFFFFF"
        android:fadingEdge="horizontal|vertical"
        android:fontFamily="@font/varela"
        android:text="@string/bye"
        android:textAllCaps="true"
        android:textColor="#FF6F00"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button_lg_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"

        android:backgroundTint="#FFFFFF"
        android:elevation="20dp"
        android:fadingEdge="horizontal|vertical"
        android:fontFamily="@font/varela"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="@string/option"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#0D47A1"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_lg_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"

        android:backgroundTint="#FFFFFF"
        android:elevation="20dp"
        android:fadingEdge="horizontal|vertical"
        android:fontFamily="@font/varela"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="@string/option"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#0D47A1"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_lg_1" />

    <Button
        android:id="@+id/button_lg_3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"

        android:backgroundTint="#FFFFFF"
        android:elevation="20dp"
        android:fadingEdge="horizontal|vertical"
        android:fontFamily="@font/varela"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="@string/option"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#0D47A1"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_lg_2" />

    <Button
        android:id="@+id/button_lg_5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"

        android:backgroundTint="#FFFFFF"
        android:elevation="20dp"
        android:fadingEdge="horizontal|vertical"
        android:fontFamily="@font/varela"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="@string/option"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#0D47A1"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_lg_4" />

    <Button
        android:id="@+id/button_lg_4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"

        android:backgroundTint="#FFFFFF"
        android:elevation="20dp"
        android:fadingEdge="horizontal|vertical"
        android:fontFamily="@font/varela"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="@string/option"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#0D47A1"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_lg_3" />

    <TextView
        android:id="@+id/txt_hmm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/varela"
        android:text="@string/hmm"
        android:textColor="#0D47A1"
        android:textSize="128sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>